--- a/index.html
+++ b/index.html
@@ -478,5 +478,77 @@
         </div>
       </div>
     </footer>
+
+    <div class="overlay">
+      <div class="overlay-window">
+        <button type="button" class="overlay-close-btn">
+          <svg class="overlay-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+
+        <p class="overlay-text">
+          Leave your contacts and we will call you back
+        </p>
+
+        <form class="overlay-form">
+          <div class="input-wrapper">
+            <label for="user-name" class="overlay-label">Name</label>
+            <div class="input-container">
+              <input
+                id="user-name"
+                name="user-name"
+                type="text"
+                class="overlay-input"
+              />
+              <svg class="overlay-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="input-wrapper">
+            <label for="user-phone" class="overlay-label">Phone</label>
+            <div class="input-container">
+              <input
+                id="user-phone"
+                name="user-phone"
+                type="tel"
+                class="overlay-input"
+              />
+              <svg class="overlay-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="input-wrapper">
+            <label for="user-email" class="overlay-label">Email</label>
+            <div class="input-container">
+              <input
+                id="user-email"
+                name="user-email"
+                type="email"
+                class="overlay-input"
+              />
+              <svg class="overlay-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-letter"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="input-wrapper">
+            <label for="user-comment" class="overlay-label">Comment</label>
+            <textarea
+              id="user-comment"
+              name="user-comment"
+              class="overlay-textarea"
+            ></textarea>
+          </div>
+
+          <button type="submit" class="overlay-submit-btn">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
