--- a/index.html
+++ b/index.html
@@ -546,6 +546,25 @@
             ></textarea>
           </div>
 
+          <div class="input-wrapper checkbox-wrapper">
+            <input
+              id="user-privacy"
+              type="checkbox"
+              value="true"
+              name="user-privacy"
+              class="visually-hidden"
+            />
+            <label for="user-privacy" class="overlay-label">
+              <span class="custom-checkbox">
+                <svg width="10" height="8" class="check-icon">
+                  <use href="./images/icons.svg#icon-checkbox"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a href="#" class="privacy-link">Privacy Policy</a>
+            </label>
+          </div>
+
           <button type="submit" class="overlay-submit-btn">Send</button>
         </form>
       </div>
