--- a/index.html
+++ b/index.html
@@ -543,6 +543,7 @@
               id="user-comment"
               name="user-comment"
               class="overlay-textarea"
+              placeholder="Text input"
             ></textarea>
           </div>
 
