--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
             </div>
           </div>
 
-          <div class="input-wrapper">
+          <div class="input-wrapper-comment">
             <label for="user-comment" class="overlay-label">Comment</label>
             <textarea
               id="user-comment"
