--- a/index.html
+++ b/index.html
@@ -548,17 +548,16 @@
           </div>
 
           <div class="input-wrapper checkbox-wrapper">
-            <input
-              id="user-privacy"
-              type="checkbox"
-              value="true"
-              name="user-privacy"
-              class="visually-hidden"
-            />
-            <label for="user-privacy" class="overlay-label">
+            <label class="overlay-label checkbox-label">
+              <input
+                type="checkbox"
+                value="true"
+                name="user-privacy"
+                class="visually-hidden"
+              />
               <span class="custom-checkbox">
                 <svg width="10" height="8" class="check-icon">
-                  <use href="./images/icons.svg#icon-checkbox"></use>
+                  <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
               I accept the terms and conditions of the
