--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
               />
               <span class="custom-checkbox">
                 <svg width="10" height="8" class="check-icon">
-                  <use href="./images/icons.svg#icon-check"></use>
+                  <use href="./images/icons.svg#icon-checkbox"></use>
                 </svg>
               </span>
               I accept the terms and conditions of the
